Resolve merge-style overlap in mobile nav styles

--- a/styles/main.css
+++ b/styles/main.css
@@ -1324,12 +1324,6 @@ footer {
     .header-inner {
         position: relative;
     }
-
-    nav ul li a {
-        display: inline-block;
-        width: 100%;
-        padding: 0.35rem 0;
-    }
 }
 
 @media (max-width: 720px) {
